<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">演圈</string>
    <string name="main_tab_show_circle">演圈</string>
    <string name="main_tab_discover">发现</string>
    <string name="main_tab_collaborate">合作</string>
    <string name="main_tab_me">我</string>
    <string name="exit_app_tips">再按一次退出</string>
    <string name="exit_perfect_tips">请完善个人信息</string>
    <string name="btn_start">立即体验</string>
    <string name="common_back">返回</string>
    <string name="common_finish">完成</string>
    <string name="app_un_fill">未填写</string>
    <string name="app_has_filled">已填写</string>
    <string name="app_upload_photo_success">图片上传成功</string>
    <string name="app_edit_data">编辑资料</string>
    <string name="tip_linkdata_error">联系人数据异常</string>
    <string name="third_wechat">微信</string>
    <string name="weixin_no">请先下载安装微信客户端</string>
    <string name="wechat_login_fail">微信登录失败</string>
    <string name="wechat_login_suc">微信授权成功</string>
    <string name="wechat_login_suc_tip">微信授权成功,绑定手机后才能正常使用演圈</string>
    <string name="wechat_error_4019">手机号已绑定其他微信帐号,请切换手机号码</string>
    <string name="wechat_login_success">微信登录成功</string>
    <string name="wechat_unbind_success">微信解绑成功</string>
    <string name="wechat_unbind_fail">微信解绑失败</string>
    <string name="wechat_bind_success">微信绑定成功</string>
    <string name="wechat_bind_fail">微信绑定失败</string>
    <string name="wechat_unbind_tip">解除微信绑定之后，您将不能用微信登录%1$s</string>
    <string name="wechat_unbind">解除绑定</string>
    <string name="share_success">分享成功</string>
    <string name="share_cancel">取消分享</string>
    <string name="share_fail">分享失败</string>
    <string name="share_main_url">https://www.showonline.com.cn</string>
    <string name="login_app_introduce">中国演出行业的互联网\n服务平台</string>
    <string name="login_weixin">微&#160;&#160;信&#160;&#160;登&#160;&#160;录</string>
    <string name="app_register">注&#160;&#160;册</string>
    <string name="app_login">登&#160;&#160;录</string>
    <string name="app_login_bold">登录</string>
    <string name="app_login_direct">直接登录</string>
    <string name="phone_number">手机号</string>
    <string name="pwd_account">密码&#160;&#160;&#160;&#160;&#160;</string>
    <string name="pwd_record">记住密码</string>
    <string name="pwd_forget">忘记密码？</string>
    <string name="app_login_other">其他登录方式</string>
    <string name="app_register_new">注册新账户&#160;&#62;</string>
    <string name="app_verify_code">验证码</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="resend_verify_code">重新发送</string>
    <string name="resend_verify_number">重新发送(%1$d)</string>
    <string name="pwd_affirm">确认密码</string>
    <string name="app_register_title">注册</string>
    <string name="register_protocol_tip">点击注册将默认你同意&#160;&#160;隐私保密条款.</string>
    <string name="pwd_retrieve">找回密码</string>
    <string name="pwd_reset">重置密码</string>
    <string name="pwd_reset_affirm">确认重置密码</string>
    <string name="pwd_reset_suc">成功重置密码</string>
    <string name="pwd_reset_suc_tip">已成功重置密码！快去登录吧</string>
    <string name="pwd_retrieve_finish">完成</string>
    <string name="account_type">账号类型</string>
    <string name="account_type_select_tip">请选择一种账号类型，注册后将不能更改</string>
    <string name="account_type_publisher">出品方</string>
    <string name="account_type_institution">机构</string>
    <string name="account_type_publisher_des">我是戏剧出品方，可能是传媒公司、工作室、个人出品方，我拥有成型并且公演过的戏剧</string>
    <string name="account_type_institution_des">我是演出机构</string>
    <string name="account_type_theatre">剧场</string>
    <string name="account_type_theatre_des">我是剧场负责人，我拥有符合经营条件的剧场资源</string>
    <string name="account_type_personal">个人</string>
    <string name="account_type_personal_des">我是演出从业者</string>
    <string name="perfect_info_next_step">下一步</string>
    <string name="perfect_account_info">帐号信息</string>
    <string name="perfect_name_publisher">出品方名称</string>
    <string name="perfect_name_personal">姓名</string>
    <string name="perfect_type_personal">个人名称：</string>
    <string name="perfect_name_theatre">剧场名称</string>
    <string name="perfect_name_institution">机构名称：</string>
    <string name="perfect_des_institution">*请填写机构名称</string>
    <string name="perfect_des_other">*请填写真实姓名</string>
    <string name="data_upload">上传资料</string>
    <string name="data_commit">提交资料</string>
    <string name="data_commit_des">%1$s是一个真实的互联网平台，我们要对您的账号进行一些资料的审核.</string>
    <string name="data_commit_success">资料递交成功</string>
    <string name="data_check_success">已成功认证</string>
    <string name="data_commit_success_des">审核周期为2个工作日，请耐心等待。如果通过，我们将以短信方式通知到您。审核通过后，您发布的所有剧场信息、项目信息、个人信息资料才会所有人看到</string>
    <string name="data_check_success_des">恭喜你已成为演出中国的认证会员！快去使用更多功能吧，发布你的项目，让更多人看到</string>
    <string name="return_main">查看首页</string>
    <string name="register_success">注册成功</string>
    <string name="data_auth_title">资质审核</string>
    <string name="data_auth_name_personal">姓名</string>
    <string name="data_auth_name_institution">机构名称</string>
    <string name="data_auth_identify_personal">身份证号码</string>
    <string name="data_auth_identify_institution">组织机构信用代码</string>
    <string name="data_auth_connect_name">联系人姓名</string>
    <string name="data_auth_connect_phone">联系人手机号</string>
    <string name="data_auth_upload_tip_personal">身份证正面照片</string>
    <string name="data_auth_upload_tip_institution">营业执照照片</string>
    <string name="data_commit_check">提交审核</string>
    <string name="tip_name_input_personal">请输入姓名</string>
    <string name="tip_name_input_institution">请输入机构名称</string>
    <string name="tip_identifyid_input_personal">请输入身份证号码</string>
    <string name="tip_identifyid_input_institution">请输入代码</string>
    <string name="tip_connect_name_input">请输入姓名</string>
    <string name="tip_connect_phone_input">请输入电话号码</string>
    <string name="tip_error_id">身份证号格式错误，请确认</string>
    <string name="cancel">取消</string>
    <string name="true_choose">确认选择</string>
    <string name="affirm">确认</string>
    <string name="affirm_info">确认信息</string>
    <string name="affirm_clear">确认清除</string>
    <string name="login_weixin_title">微信登录</string>
    <string name="login_set_pwd">设置密码</string>
    <string name="login_set_pwd_tip">*请设置一个不少于8位的密码</string>
    <string name="please_input_correct_phone">手机号码格式错误，请确认</string>
    <string name="tip_dialog_title">提示</string>
    <string name="tip_dialog_login_title">登录提示</string>
    <string name="tip_dialog_login">您还没有登录，请先登录</string>
    <string name="tip_input_phone">请输入手机号码</string>
    <string name="tip_input_verify_code">请输入验证码</string>
    <string name="tip_input_pwd">请输入密码</string>
    <string name="tip_input_entrue_pwd">请输入确认密码</string>
    <string name="tip_input_dif_psw">两次输入密码不相同，请确认</string>
    <string name="tip_input_length">密码不少于8位字符哦</string>
    <string name="tip_user_type_select">请选择账户类型</string>
    <string name="tip_set_pwd_success">密码修改成功</string>
    <string name="tip_set_avatar">请设置用户头像</string>
    <string name="tip_set_name">请填写姓名</string>
    <string name="tip_set_name_personal">请输入个人名称</string>
    <string name="tip_set_name_org">请输机构名称</string>
    <string name="tip_data_parsing_failure">数据解析失败</string>
    <string name="tip_mobile_unregister">未发现该号码请先注册</string>
    <string name="tip_mobile_registered">该手机号码已经注册</string>
    <string name="tip_data_parsing_exception">数据异常，请返回登录</string>
    <string name="tip_file_path_unexists">文件不存在，请修重新选择图片</string>
    <string name="tip_illegal_argument_exception">请传入Activity或Fragment</string>
    <string name="tip_no_more_date">没有更多数据了</string>
    <string name="tip_data_error">数据异常</string>
    <string name="tip_data_commit_fail">信息提交失败</string>
    <string name="tip_auth_data_update">请上传资质认证图片</string>
    <string name="tip_net_error">服务器异常，请稍候重试</string>
    <string name="tip_delete_success">删除成功</string>
    <string name="tip_delete_staff">是否删除主创成员</string>
    <string name="response_code_200">success</string>
    <string name="response_code_240">账户不存在</string>
    <string name="response_code_4000">参数签名错误</string>
    <string name="response_code_4001">令牌过期，请重新登录</string>
    <string name="response_code_4002">系统内部错误</string>
    <string name="response_code_4003">请求参数错误</string>
    <string name="response_code_4004">验证码错误</string>
    <string name="response_code_4005">账号被限制使用</string>
    <string name="response_code_4006">账号或密码错误</string>
    <string name="response_code_4007">手机号已存在</string>
    <string name="response_code_4008">操作频繁，稍候再试</string>
    <string name="response_code_4009">文件类型错误</string>
    <string name="response_code_4010">重复报名</string>
    <string name="response_code_4011">账号未认证</string>
    <string name="response_code_4012">账号不存在</string>
    <string name="response_code_4013">资源不存在</string>
    <string name="response_code_4014">越权操作</string>
    <string name="response_code_4015">账号信息不完整</string>
    <string name="response_code_4016">资源信息不完整</string>
    <string name="response_code_4017">帐号审核中</string>
    <string name="response_code_4018">帐号审核未通过</string>
    <string name="response_code_4019">手机号已绑定其他微信帐号</string>
    <string name="response_code_4020">微信已经绑定其手机号</string>
    <string name="response_code_other">未知错误</string>
    <string name="loading">加载中</string>
    <string name="loading_upload">图片上传中(%1$d/%2$d)</string>
    <string name="loading_done">加载完成</string>
    <string name="pic_loading_success">图片上传完成，请重新选择上传图片</string>
    <string name="cooperate_title">合作招募</string>
    <string name="cooperate_search">搜索合作招募</string>
    <string name="cooperate_item_des">快来报名参加吧！</string>
    <string name="cooperate_item_status">报名中</string>
    <string name="cooperate_end_time">截止时间：%1$s</string>
    <string name="enroll_detail_tetle">演出中国-合作招募</string>
    <string name="enroll_detail">详情介绍</string>
    <string name="enroll_detail_read">阅读：&#160;%1$d</string>
    <string name="enroll_apply">我要报名</string>
    <string name="enroll_apply_number">巡演人数</string>
    <string name="enroll_first_show_time">首演时间</string>
    <string name="enroll_produce_add">+&#160;&#160;添加新项目</string>
    <string name="enroll_adopt">入围戏剧项目</string>
    <string name="enroll_all">参与报名戏剧项目（%1$d）</string>
    <string name="enroll_all_without_count">参与报名戏剧项目</string>
    <string name="tip_enroll_disjoin">只有机构用户才能报名</string>
    <string name="tip_enroll_limit">只能参与%1$d个项目</string>
    <string name="tip_enroll_select">请选择报名项目，再提交</string>
    <string name="tip_enroll_commit_suc">报名成功</string>
    <string name="me_unlogin_des">推荐项目</string>
    <string name="institution_auth">机构认证</string>
    <string name="institution_auth_immediately">立刻认证</string>
    <string name="institution_my_project">我的项目</string>
    <string name="institution_my_theatre">我的剧场</string>
    <string name="institution_upload_theatre">上传剧场信息</string>
    <string name="institution_my_talent">我的人才</string>
    <string name="institution_upload_talent">上传人才简历</string>
    <string name="setting_item_account">账户信息</string>
    <string name="setting_item_bind_wx">微信绑定</string>
    <string name="setting_item_clear_cache">清除缓存</string>
    <string name="setting_item_about_us">关于我们</string>
    <string name="setting_item_connect_us">联系我们</string>
    <string name="setting_exit_login">退&#160;出&#160;登&#160;录</string>
    <string name="set_base_info">基本信息</string>
    <string name="set_other_info">其他信息</string>
    <string name="resume_post_tip">是否发布</string>
    <string name="theatre_data_unfill">未填写</string>
    <string name="theatre_data_base">基本资料</string>
    <string name="project_cover">上传封面</string>
    <string name="project_intro">项目介绍</string>
    <string name="project_show_intro">演出介绍</string>
    <string name="project_award_records">获奖记录</string>
    <string name="project_creator_intro">主创介绍</string>
    <string name="project_photo">剧照</string>
    <string name="project_tech_require">技术要求</string>
    <string name="project_release">发布项目</string>
    <string name="project_post_des">*项目发布后，所有人可见，未发布，将只有自己可见。</string>
</resources>