<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fly_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0" />

    <RadioGroup
        android:id="@+id/rdogp_main_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_tab_bottom"
        android:background="@color/main_bottom_bg"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdobtn_show_circle"
            style="@style/main_tab"
            android:checked="true"
            android:drawableTop="@drawable/main_tab_circle_selector"
            android:text="@string/main_tab_show_circle" />

        <RadioButton
            android:id="@+id/rdobtn_discover"
            style="@style/main_tab"
            android:drawableTop="@drawable/main_tab_discover_selector"
            android:text="@string/main_tab_discover" />

        <RadioButton
            android:id="@+id/rdobtn_collaborate"
            style="@style/main_tab"
            android:drawableTop="@drawable/main_tab_collaborate_selector"
            android:text="@string/main_tab_collaborate" />

        <RadioButton
            android:id="@+id/rdobtn_me"
            style="@style/main_tab"
            android:drawableTop="@drawable/main_tab_me_selector"
            android:text="@string/main_tab_me" />
    </RadioGroup>

</LinearLayout>
