<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_title_common" />

        <TextView
            android:id="@+id/tv_set_pwd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_30PX"
            android:layout_marginTop="@dimen/DIMEN_5PX"
            android:text="@string/login_set_pwd"
            android:textColor="@color/login_btn"
            android:textSize="34sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_30PX"
            android:layout_marginRight="@dimen/DIMEN_30PX"
            android:layout_marginTop="@dimen/DIMEN_5PX">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd_account"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="@dimen/DIMEN_15PX"
                android:singleLine="true"
                android:textColorHint="@color/login_light"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_30PX"
            android:layout_marginRight="@dimen/DIMEN_30PX"
            android:layout_marginTop="@dimen/DIMEN_5PX">

            <EditText
                android:id="@+id/edt_pwd_affirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd_affirm"
                android:imeActionId="@+id/register"
                android:imeActionLabel="@string/app_register_title"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="@dimen/DIMEN_15PX"
                android:singleLine="true"
                android:textColorHint="@color/login_light"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_30PX"
            android:layout_marginRight="@dimen/DIMEN_30PX"
            android:layout_marginTop="@dimen/DIMEN_5PX"
            android:text="@string/login_set_pwd_tip"
            android:textColor="@color/login_light"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_register"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/DIMEN_40PX"
            android:layout_marginLeft="@dimen/DIMEN_30PX"
            android:layout_marginRight="@dimen/DIMEN_30PX"
            android:layout_marginTop="@dimen/DIMEN_48PX"
            android:background="@drawable/shape_bg_red"
            android:gravity="center"
            android:text="@string/app_register"
            android:textColor="@color/whiteff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/DIMEN_15PX"
            android:layout_marginLeft="@dimen/DIMEN_30PX"
            android:layout_marginRight="@dimen/DIMEN_30PX"
            android:layout_marginTop="@dimen/DIMEN_15PX"
            android:text="@string/register_protocol_tip"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>