<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:set_item="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteff"
    android:orientation="vertical">

    <include layout="@layout/layout_title_common" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_1PX"
        android:background="@color/me_personal_line" />

    <com.art.huakai.artshow.widget.SettingItem
        android:id="@+id/item_account_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_47PX"
        android:layout_marginTop="@dimen/DIMEN_28PX"
        set_item:item_arrow="@mipmap/arrow_right"
        set_item:item_icon="@mipmap/icon_item_accout"
        set_item:item_title="@string/setting_item_account" />

    <com.art.huakai.artshow.widget.SettingItem
        android:id="@+id/item_bind_wechat"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_47PX"
        set_item:item_arrow="@mipmap/arrow_right"
        set_item:item_icon="@mipmap/icon_item_weixin"
        set_item:item_title="@string/setting_item_bind_wx" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_1PX"
        android:background="@color/me_personal_line" />

    <com.art.huakai.artshow.widget.SettingItem
        android:id="@+id/item_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_47PX"
        android:layout_marginTop="@dimen/DIMEN_28PX"
        set_item:item_arrow="@mipmap/arrow_right"
        set_item:item_icon="@mipmap/icon_item_clear"
        set_item:item_title="@string/setting_item_clear_cache" />

    <com.art.huakai.artshow.widget.SettingItem
        android:id="@+id/item_about_us"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_47PX"
        set_item:item_arrow="@mipmap/arrow_right"
        set_item:item_icon="@mipmap/icon_item_about"
        set_item:item_title="@string/setting_item_about_us" />

    <com.art.huakai.artshow.widget.SettingItem
        android:id="@+id/item_connect_us"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_47PX"
        set_item:item_arrow="@mipmap/arrow_right"
        set_item:item_icon="@mipmap/icon_item_contact"
        set_item:item_title="@string/setting_item_connect_us" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_1PX"
        android:background="@color/me_personal_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0">

        <Button
            android:id="@+id/btn_exit_login"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/DIMEN_40PX"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/DIMEN_20PX"
            android:layout_marginLeft="@dimen/DIMEN_30PX"
            android:layout_marginRight="@dimen/DIMEN_30PX"
            android:background="@drawable/border_bg_red"
            android:gravity="center"
            android:letterSpacing="0.3"
            android:text="@string/setting_exit_login"
            android:textColor="@color/theatre_send_fail"
            android:textSize="15sp" />
    </RelativeLayout>
</LinearLayout>
