<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_title_common" />

        <TextView
            android:id="@+id/tv_set_pwd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_30PX"
            android:layout_marginTop="@dimen/DIMEN_5PX"
            android:text="@string/pwd_reset_suc"
            android:textColor="@color/login_btn"
            android:textSize="34sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_30PX"
            android:layout_marginRight="@dimen/DIMEN_30PX"
            android:layout_marginTop="@dimen/DIMEN_44PX"
            android:maxLines="1"
            android:text="@string/pwd_reset_suc_tip"
            android:textColor="@color/black66"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btn_login_direct"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/DIMEN_40PX"
            android:layout_marginBottom="@dimen/DIMEN_25PX"
            android:layout_marginLeft="@dimen/DIMEN_30PX"
            android:layout_marginRight="@dimen/DIMEN_30PX"
            android:layout_marginTop="@dimen/DIMEN_43PX"
            android:background="@drawable/shape_bg_red"
            android:gravity="center"
            android:text="@string/app_login_direct"
            android:textColor="@color/whiteff"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>